--- a/notes.org
+++ b/notes.org
@@ -1,18 +1,10 @@
 * Problem statement
 
-The goal of this project is to enhance the =argocd diff= and =kubectl diff= user experience.
+The goal of this project is to enhance =argocd diff= and =kubectl diff=
+by allowing to process manifests with arbitrary yq expression,
+before applying the user's =KUBECTL_EXTERNAL_DIFF= program.
 
-** Ideas for improvements
-
-- Control over what is diffed
-  - Limit the diff to a given =.kind= of resources, for example =Pod=
-  - Limit the scope of the diff, for example to the resource =.spec=
-  - Remove noisy fields from the diff, such as =last-applied-configuration=
-  - More generally, allow arbitrary =yq= preprocessing of manifests before the diff
-- Ability to still choose custom diff tool
-  - use any of =dyff=, =difftastic=, =delta= etc...
-
-** Examples
+** Advanced examples
 
 #+begin_src bash
   # Assume the script is called kdiff
@@ -36,21 +28,32 @@ The goal of this project is to enhance the =argocd diff= and =kubectl diff= user
   kdiff --ignore=.metadata.labels,.spec.affinity -- -f mydeploy.yaml
 #+end_src
 
-** Design considerations
 
-- Diff generation
-  - Hooking into =KUBECTL_EXTERNAL_DIFF= seems a good idea
-  - It should be possible to call the script interactively,
-    or assign it directly to =KUBECTL_EXTERNAL_DIFF=
-  - If called interactively,
-    the users original =KUBECTL_EXTERNAL_DIFF= should be taken into consideration
-  - Bash could be a suitable programming language for this part,
-    but I am open to suggestions
-- The script name should be short, elegant and convey the ideas of flexibility, kubernetes, and diffing.
+** Ideas
+
+- Control over what is diffed
+  - Limit the diff to a given =.kind= of resources, for example =Pod=
+  - Limit the scope of the diff, for example to the resource =.spec=
+  - Remove noisy fields from the diff, such as =last-applied-configuration=
+
+- Ability to still choose custom diff tool
+  - use any of =dyff=, =difftastic=, =delta= etc...
+
+- Ability to use presets stored in $XDG_CONFIG/kdiff
+
+
+** Design
+
+- It should be possible to call the script interactively,
+  or assign it directly to =KUBECTL_EXTERNAL_DIFF=
+- If called interactively,
+  the users original =KUBECTL_EXTERNAL_DIFF= should be taken into consideration
 
 
 * Brainstorming instructions
+
 - Help me brainstorm around this initial idea
+
 - Help me produce and actionable plan, captured in Markdown format
 - Structure your thoughts in three sections:
   - MVP design
@@ -63,6 +66,46 @@ The goal of this project is to enhance the =argocd diff= and =kubectl diff= user
 
 * Agent context
 
-- You can find an initial design plan in =PLAN.md=
-- You should create a =TODO.md= file that will hold finer-grained task descriptions and concrete next steps.
-- You should regularly commit your changes to the branch =<agent>/main=
+The goal of this project is to enhance =argocd diff= and =kubectl diff=
+by pre-processing manifests with arbitrary =yq= expression,
+before applying the user's =KUBECTL_EXTERNAL_DIFF= program.
+
+- The main script is =src/kdiff=
+- You should regularly commit your changes to the current branch
+
+** KUBECTL_EXTERNAL_DIFF calling conventions
+
+The script  =src/kdiff-inspect= was shows the calling conventions used by =kubectl= and =argocd-diff=
+
+=kubectl diff= calls =KUBECTL_EXTERNAL_DIFF= once,
+with two directories containing all the files to compare.
+#+begin_example
+$ export KUBECTL_EXTERNAL_DIFF=kdiff-inspect
+$ k diff -f v1_configmap_argocd-cm.yaml -f v1_configmap_argocd-cmd-params-cm.yaml
+Argument list: /tmp/LIVE-3407625460 /tmp/MERGED-4175425960
+Left: /tmp/LIVE-3407625460
+v1.ConfigMap.argocd.argocd-cm
+v1.ConfigMap.argocd.argocd-cmd-params-cm
+Right: /tmp/MERGED-4175425960
+v1.ConfigMap.argocd.argocd-cm
+v1.ConfigMap.argocd.argocd-cmd-params-cm
+#+end_example
+
+=argocd diff= calls =KUBECTL_EXTERNAL_DIFF= once for each pair of files to compare.
+#+begin_example
+$ export KUBECTL_EXTERNAL_DIFF=kdiff-inspect
+$ argocd app diff myapp
+===== /ServiceAccount argocd/argocd-redis-ha-haproxy ======
+Argument list: /tmp/argocd-diff3488706002/argocd-redis-ha-haproxy-live.yaml /tmp/argocd-diff3488706002/argocd-redis-ha-haproxy
+Left: /tmp/argocd-diff3488706002/argocd-redis-ha-haproxy-live.yaml
+/tmp/argocd-diff3488706002/argocd-redis-ha-haproxy-live.yaml
+Right: /tmp/argocd-diff3488706002/argocd-redis-ha-haproxy
+/tmp/argocd-diff3488706002/argocd-redis-ha-haproxy
+
+===== /ServiceAccount argocd/argocd-repo-server ======
+Argument list: /tmp/argocd-diff74211896/argocd-repo-server-live.yaml /tmp/argocd-diff74211896/argocd-repo-server
+Left: /tmp/argocd-diff74211896/argocd-repo-server-live.yaml
+/tmp/argocd-diff74211896/argocd-repo-server-live.yaml
+Right: /tmp/argocd-diff74211896/argocd-repo-server
+/tmp/argocd-diff74211896/argocd-repo-server
+#+end_example
