--- a/notes.org
+++ b/notes.org
@@ -64,18 +64,65 @@ before applying the user's =KUBECTL_EXTERNAL_DIFF= program.
     - What inspires you!
 
 
-* Agent context
+* Context
 
-The goal of this project is to enhance =argocd diff= and =kubectl diff=
-by pre-processing manifests with arbitrary =yq= expression,
-before applying the user's =KUBECTL_EXTERNAL_DIFF= program.
+The =kdiff= utility aims to improve the =kubectl diff= and =argocd
+app diff= user experience by allowing to specify how manifests should be
+transformed and compared.
 
-- The main script is =src/kdiff=
-- You should regularly commit your changes to the current branch
+#+begin_src sh
+  # Arguments after -- are passed to kubectl by default
+  kdiff --transform 'yq .spec' --compare 'diff -u --color' -- -f mypod.yaml
+
+  # A --yq shorthand is provided for convenience,
+  # and KUBECTL_EXRTERNAL_DIFF is honored.
+  # Thus, the following call is equivalent
+  KUBECTL_EXTERNAL_DIFF='diff -u --color'
+  kdiff --yq=.spec  -- -f mypod.yaml
+#+end_src
+
+
+
+This is achieved by hooking into =KUBECTL_EXTERNAL_DIFF=, and
+saving =--transform= and =--compare= executables in a *preset*.
+
+A preset is a directory in ={HOME}/.config/kdiff= that contains two executables:
+- =transform=, that takes a yaml stream on stdin and outputs a YAML stream.
+- =compare=, that takes two files or two directories as arguments and outputs the diff
+
+For example, a preset called =neat-dyff= that uses [[https://github.com/itaysk/kubectl-neat][kubectl-neat]] to de-clutter manifests and
+[[https://github.com/homeport/dyff][dyff]] to compare them could be created thus:
+#+begin_src sh
+  PRESET_DIR=~/.config/kdiff/neat-dyff
+  mkdir -p "${PRESET_DIR}"
+
+  cat <<EOF > "${PRESET_DIR}"/transform
+  #!/bin/bash
+  kubectl-neat -f -
+  EOF
+
+  cat <<'EOF' > "${PRESET_DIR}"/compare
+  #!/bin/bash
+  dyff between --omit-header --set-exit-code "$1" "$2"
+  EOF
+
+  chmod -R +x "${PRESET_DIR}"
+#+end_src
+
+The preset can be used interactively,
+or set as a default for all =kubectl diff= and =argocd app diff= calls.
+#+begin_src sh
+  # Use as default for all kubectl diff calls
+  KUBECTL_EXTERNAL_DIFF="kdiff --preset neat-dyff"
+  kubectl diff -f mypod.yaml
+
+  # Use just this one time
+  kiff --preset neat-dyff -- -f mypod.yaml
+#+end_src
 
 ** KUBECTL_EXTERNAL_DIFF calling conventions
 
-The script  =src/kdiff-inspect= was shows the calling conventions used by =kubectl= and =argocd-diff=
+The following examples show how the =KUBECTL_EXTERNAL_DIFF= is called by =kubectl= and =argocd=
 
 =kubectl diff= calls =KUBECTL_EXTERNAL_DIFF= once,
 with two directories containing all the files to compare.
