--- a/TODO.org
+++ b/TODO.org
@@ -1,17 +1,15 @@
-* TODO Debug ArgoCD diff
+* TODO Adapt staging strategy to file with different basenames
+- ArgoCD passes arguments =<resource name>-live.yaml= and =<resource name>=
+- Current =kdiff= staging strategy:
+  - creates "left" and "right" directories
+  - passes "left" and "right" to the comparison function
+- This fails if files in left and right do not have the same name
 
-Running:
-#+begin_src sh
-KUBECTL_EXTERNAL_DIFF="kdiff --preset default"
-argocd app diff argocd/argocd --local overlays/prod --local-repo-root "${HOME}/kth/platform/argocd"
-#+end_src
+- Possible fixe:
+  - Take advantage that we already check argument type,
+    and can set =file_compare= variable
+  - Pass files directly rather than directories to =compare= executable
 
-Outputs:
-#+begin_example
-===== /ConfigMap argocd/argocd-cm ======
-error: Unexpected args: [/tmp/argocd-diff2657689926/argocd-cm-live.yaml /tmp/argocd-diff2657689926/argocd-cm]
-See 'kubectl diff -h' for help and examples
-#+end_example
 * TODO Improve preset executable not found error message
 The current message is:
 #+begin_src example
