--- a/README.org
+++ b/README.org
@@ -1,74 +1,8 @@
-* Problem statement
+#+TITLE: kdiff
 
-The goal of this project is to enhance =argocd diff= and =kubectl diff=
-by allowing to process manifests with arbitrary yq expression,
-before applying the user's =KUBECTL_EXTERNAL_DIFF= program.
+=kdiff= integrates configurable filter and compare logic with =kubectl diff=.
 
-** Advanced examples
-
-#+begin_src bash
-  # Assume the script is called kdiff
-  # Should output a helpful message
-  kdiff --help
-
-  # Diff only the resource specs
-  # Use kubectl diff as default command, and forward all arguments after --
-  kdiff --scope=.spec -- -rR overlays/staging
-
-  # Show the diff for services and pods
-  kdiff --kind=svc,po -- argocd diff myapp
-
-  # Use kdiff with a predefined set of arguments as KUBECTL_EXTERNAL_DIFF
-  # kdiff should know wether it is invoked interactively, or as KUBECTL_EXTERNAL_DIFF
-  export KUBECTL_EXTERNAL_DIFF="kdiff --yq '... style=\"\" | del(.metadata.labels)'"
-  kubectl diff -f mypod.yaml
-
-  # The user should be able to use any diff tool
-  KUBECTL_EXTERNAL_DIFF=fancydiff
-  kdiff --ignore=.metadata.labels,.spec.affinity -- -f mydeploy.yaml
-#+end_src
-
-
-** Ideas
-
-- Control over what is diffed
-  - Limit the diff to a given =.kind= of resources, for example =Pod=
-  - Limit the scope of the diff, for example to the resource =.spec=
-  - Remove noisy fields from the diff, such as =last-applied-configuration=
-
-- Ability to still choose custom diff tool
-  - use any of =dyff=, =difftastic=, =delta= etc...
-
-- Ability to use presets stored in $XDG_CONFIG/kdiff
-
-
-** Design
-
-- It should be possible to call the script interactively,
-  or assign it directly to =KUBECTL_EXTERNAL_DIFF=
-- If called interactively,
-  the users original =KUBECTL_EXTERNAL_DIFF= should be taken into consideration
-
-
-* Brainstorming instructions
-
-- Help me brainstorm around this initial idea
-
-- Help me produce and actionable plan, captured in Markdown format
-- Structure your thoughts in three sections:
-  - MVP design
-    - Very actionable outline to code a minimal working version of the tool
-  - Next steps
-    - The most important improvements after MVP
-  - Wild ideas
-    - What inspires you!
-
-
-* Context
-
-=kdiff= integrates arbitrary filtering and comparison logic with =kubectl diff=.
-
-Specify how your manifests should be filtered (i.e. "cleaned", of narrowed down in scope),
+Specify how your manifests should be filtered (i.e. "cleaned", or narrowed down in scope),
 and how they shoud be compared, directly on the command line:
 #+begin_src sh
   # Arguments after -- are passed to kubectl by default
